--- a/pricing.html
+++ b/pricing.html
@@ -14,22 +14,23 @@
       border: 1px solid #f00;
     }
     
-    tr:nth-child(4) {
+    tr:nth-child(1) {
     font-size: 48px;
     text-align: center;
+    background-color: #CFBA9B;
     }
     
-    tr:nth-child(1) {
+    tr:nth-child(2) {
       font-size: 36px;
       background-color: #FFDBC7;
       color: #fff;
     }
-    tr:nth-child(2) {
+    tr:nth-child(3) {
       background-color: #422D15;
       color: #fff;
       font-style: bold;
     }
-    tr:nth-child(3) {
+    tr:nth-child(4) {
       background-color: #AF7EFF;
     }
     tr:nth-child(5) {
