--- a/pricing.html
+++ b/pricing.html
@@ -6,7 +6,7 @@
       border: 2px solid #000;
     }
     th { 
-      background-color: #25BFB9;
+      background-color: ##D3D3D3;
       text-transform: uppercase;
     }
     
