--- a/pricing.html
+++ b/pricing.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+   <link href='style.css' rel='stylesheet'>
   <style>
     table {
       border: 2px solid #000;
@@ -100,7 +101,7 @@ contains logo designs and poster designs.
   <td>
      <ul>
      <li>A .com domain</li>
-     <li>A custom logo Designs</li>
+     <li>2 custom logo Designs</li>
      <li>HTML/CSS Website Code</li>
    </ul>
   </td>
