--- a/pricing.html
+++ b/pricing.html
@@ -2,9 +2,18 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
    <link href='style.css' rel='stylesheet'>
+   </head>
+   <header><img src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo" width="150">
+<h2>A girl who simply enjoys the creative things in life.</h2>
+<h1>Pricing</h1><nav>
+  <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>
+ </nav></header>
   <style>
     table {
       border: 2px solid #000;
+      position: fixed;
+      top: 58px;
+      text-align: center;
     }
     th { 
       background-color: ##D3D3D3;
@@ -68,7 +77,7 @@
   </style>
 </head>
 <body>
-<h1>Pricing</h1>
+
 <table>
 <tr>
   <th><i class="fa fa-star"></i></th>
