--- a/pricing.html
+++ b/pricing.html
@@ -6,13 +6,13 @@
    <header><img src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo" width="150">
 <h2>A girl who simply enjoys the creative things in life.</h2>
 <h1>Pricing</h1><nav>
-  <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>
+  <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Pricing</a>
  </nav></header>
   <style>
     table {
       border: 2px solid #000;
       position: fixed;
-      top: 58px;
+      top: 236px;
       text-align: center;
     }
     th { 
