--- a/pricing.html
+++ b/pricing.html
@@ -74,6 +74,15 @@
   background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
   text-decoration: none;
+  
+   h2 {
+        text-align: center;
+    color: #fff;
+    font-family: 'Satisfy', cursive;
+    font-size: 30px;
+    position: fixed;
+    top: 6px;
+    left: 177px
   </style>
 </head>
 <body>
