--- a/pricing.html
+++ b/pricing.html
@@ -39,6 +39,7 @@
       background-color: #422D15;
       color: #fff;
       font-style: bold;
+      font-size: 24px;
     }
     tr:nth-child(4) {
       background-color: #AF7EFF;
@@ -46,6 +47,7 @@
     tr:nth-child(5) {
       text-align: center;
       height: 12px;
+      font-size: 24px;
     }
     td {
       border: 1px solid #bada55;
