--- a/pricing.html
+++ b/pricing.html
@@ -32,7 +32,7 @@
     
     tr:nth-child(2) {
       font-size: 36px;
-      background-color: #FFDBC7;
+      background-color: #d3d3d3;
       color: #fff;
     }
     tr:nth-child(3) {
