--- a/pricing.html
+++ b/pricing.html
@@ -42,7 +42,7 @@
       font-size: 24px;
     }
     tr:nth-child(4) {
-      background-color: #AF7EFF;
+      background-color: #d3d3d3;
     }
     tr:nth-child(5) {
       text-align: center;
