--- a/pricing.html
+++ b/pricing.html
@@ -28,26 +28,31 @@
     font-size: 48px;
     text-align: center;
     background-color: #CFBA9B;
+    font-family: 'Montserrat', sans-serif;
     }
     
     tr:nth-child(2) {
       font-size: 36px;
       background-color: #d3d3d3;
       color: #fff;
+      font-family: 'Montserrat', sans-serif;
     }
     tr:nth-child(3) {
       background-color: #422D15;
       color: #fff;
       font-style: bold;
       font-size: 24px;
+      font-family: 'Montserrat', sans-serif;
     }
     tr:nth-child(4) {
       background-color: #d3d3d3;
+      font-family: 'Montserrat', sans-serif;
     }
     tr:nth-child(5) {
       text-align: center;
       height: 12px;
       font-size: 24px;
+      font-family: 'Montserrat', sans-serif;
     }
     td {
       border: 1px solid #bada55;
