--- a/pricing.html
+++ b/pricing.html
@@ -38,7 +38,7 @@
       font-family: 'Montserrat', sans-serif;
     }
     tr:nth-child(3) {
-      background-color: #422D15;
+      background-color: #cfba9b;
       color: #fff;
       font-style: bold;
       font-size: 24px;
@@ -53,6 +53,7 @@
       height: 12px;
       font-size: 24px;
       font-family: 'Montserrat', sans-serif;
+      background-color: #CFBA9B;
     }
     td {
       border: 1px solid #bada55;
