--- a/pricing.html
+++ b/pricing.html
@@ -47,6 +47,7 @@
     tr:nth-child(4) {
       background-color: #d3d3d3;
       font-family: 'Montserrat', sans-serif;
+      font-size: 36px;
     }
     tr:nth-child(5) {
       text-align: center;
@@ -54,6 +55,7 @@
       font-size: 24px;
       font-family: 'Montserrat', sans-serif;
       background-color: #CFBA9B;
+      font-size: 24px;
     }
     td {
       border: 1px solid #bada55;
