--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,6 @@
 </head>
 <header><img src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo" width="150">
 <h2>A girl who simply enjoys the creative things in life.</h2>
-<h1>About Me</h1><nav>
+<h1>Gallery</h1><nav>
 <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Pricing</a>|<a href="gallery.html">Gallery</a>
  </nav></header>
