--- a/pricing.html
+++ b/pricing.html
@@ -57,6 +57,14 @@
       background-color: #CFBA9B;
       font-size: 24px;
     }
+    
+    tr: nth-child(6) {
+      background-color: #d3d3d3;
+      text-align: center;
+      margin-bottom: 14px;
+      margin-top: 12px;
+      font-family: 'Montserrat', sans-serif;
+    }
     td {
       border: 1px solid #bada55;
     }
