--- a/pricing.html
+++ b/pricing.html
@@ -14,6 +14,7 @@
       position: fixed;
       top: 236px;
       text-align: center;
+      border-spacing: none;
     }
     th { 
       background-color: ##D3D3D3;
