--- a/gallery.html
+++ b/gallery.html
@@ -12,3 +12,20 @@
 <h1>Gallery</h1><nav>
 <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Pricing</a>|<a href="gallery.html">Gallery</a>
  </nav></header>
+<body>
+ <table>
+<tr>
+  <th><i class="fa fa-star"></i></th>
+  <th><i class="fa fa-check"></i></th>
+  <th><i class="fa fa-plus"></i></th>
+  </tr>
+  <tr>
+  <th>Portfolio</th>
+</tr>
+<tr>
+  <td> <img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"></td>
+  <td><img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles"></td>
+ <td><img width="300" src="http://i.imgur.com/U7f8qzK.gif" alt="my-designs" title="Black-and-WhiteFlowers"></td>
+</tr>
+</body>
+</table>
