--- a/gallery.html
+++ b/gallery.html
@@ -23,8 +23,8 @@
   <th>Portfolio</th>
 </tr>
 <tr>
-  <td> <img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"></td>
-  <td><img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles"></td>
+  <td> <img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"></td><br>
+  <td><img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles"></td><br>
  <td><img width="300" src="http://i.imgur.com/U7f8qzK.gif" alt="my-designs" title="Black-and-WhiteFlowers"></td>
 </tr>
 </body>
