--- a/gallery.html
+++ b/gallery.html
@@ -20,11 +20,11 @@
   <th><i class="fa fa-plus"></i></th>
   </tr>
   <tr>
-  <th>Portfolio</th>
+
 </tr>
 <tr>
-  <td> <img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"></td><br>
-  <td><img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles"></td><br>
+  <td>Textile <img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"></td><br>
+  <td>Textile<img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles"></td><br>
 </tr>
 </body>
 </table>
