--- a/gallery.html
+++ b/gallery.html
@@ -22,8 +22,9 @@
   <tr>
 
 </tr>
-<tr><td>Textile <img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"></td></tr>
-<tr><td>Textile<img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles"></td></tr>
+<tr>
+ <td>Textile <img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"></td>
+<td>Textile<img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles"></td>
 </tr>
 </body>
 </table>
