--- a/gallery.html
+++ b/gallery.html
@@ -19,12 +19,11 @@
   <th><i class="fa fa-check"></i></th>
   <th><i class="fa fa-plus"></i></th>
   </tr>
-  <tr>
-
-</tr>
+  
 <tr>
- <td>Textile <img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"></td>
-<td>Textile<img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles"></td>
+ <caption>Textiles</caption>
+ <td><img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"></td>
+<td><img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles"></td>
 </tr>
 </body>
 </table>
