--- a/pricing.html
+++ b/pricing.html
@@ -108,9 +108,9 @@
 
 <table>
 <tr>
-  <th><i class="fa fa-star"></i></th>
+  <th><i class="fa fa-check-circle-o"></i></th>
   <th><i class="fa fa-check"></i></th>
-  <th><i class="fa fa-plus"></i></th>
+  <th><i class="fa fa-check-circle"></i></th>
   </tr>
   <tr>
   <th>Graphic Design Package</th>
