--- a/pricing.html
+++ b/pricing.html
@@ -15,6 +15,8 @@
       top: 236px;
       text-align: center;
       border-spacing: none;
+      width: 90%;
+      height: 40px;
     }
     th { 
       background-color: ##D3D3D3;
@@ -23,6 +25,7 @@
     
     tr {
       border: 1px solid #f00;
+      height: 12px;
     }
     
     tr:nth-child(1) {
