--- a/pricing.html
+++ b/pricing.html
@@ -52,6 +52,7 @@
       background-color: #d3d3d3;
       font-family: 'Montserrat', sans-serif;
       font-size: 40px;
+      height: 14px;
     }
     tr:nth-child(5) {
       text-align: center;
