--- a/pricing.html
+++ b/pricing.html
@@ -162,7 +162,7 @@ contains logo designs and poster designs.
     $300
   </td>
 </tr>
-<tr>
+<tr rowspan="1">
   <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
   <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
   <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
