--- a/pricing.html
+++ b/pricing.html
@@ -65,9 +65,8 @@
     tr: nth-child(6) {
       background-color: #d3d3d3;
       text-align: center;
-      margin-bottom: 14px;
-      margin-top: 12px;
       font-family: 'Montserrat', sans-serif;
+      height: 16px;
     }
     td {
       border: 1px solid #bada55;
@@ -162,7 +161,9 @@ contains logo designs and poster designs.
     $300
   </td>
 </tr>
-<tr rowspan="3">
+<tr>
+  <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
+  <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
   <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
 </tr>
 </table>
