--- a/pricing.html
+++ b/pricing.html
@@ -67,6 +67,7 @@
       text-align: center;
       font-family: 'Montserrat', sans-serif;
       height: 16px;
+      vertical-align: bottom;
     }
     td {
       border: 1px solid #bada55;
