--- a/pricing.html
+++ b/pricing.html
@@ -163,9 +163,9 @@ contains logo designs and poster designs.
   </td>
 </tr>
 <tr>
-  <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
-  <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
-  <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
+  <td style="border-bottom: 12px"><a class="btn" href="contact.html">Contact me Now!!!</a></td>
+  <td style="border-bottom: 12px"><a class="btn" href="contact.html">Contact me Now!!!</a></td>
+  <td style="border-bottom: 12px"><a class="btn" href="contact.html">Contact me Now!!!</a></td>
 </tr>
 </table>
 </body>
