--- a/pricing.html
+++ b/pricing.html
@@ -109,7 +109,7 @@
 </head>
 <body>
 
-<table>
+<table border="2">
 <tr>
   <th><i class="fa fa-check-circle-o"></i></th>
   <th><i class="fa fa-check"></i></th>
