--- a/pricing.html
+++ b/pricing.html
@@ -18,6 +18,10 @@
       width: 90%;
       height: 40px;
     }
+    
+    table border {
+      border: 2px ridge #987456;
+    }
     th { 
       background-color: ##D3D3D3;
       text-transform: uppercase;
