--- a/gallery.html
+++ b/gallery.html
@@ -13,13 +13,21 @@
 <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Pricing</a>|<a href="gallery.html">Gallery</a>
  </nav></header>
 <body>
+ <style>
+  table {
+      border: 2px solid #000;
+      position: fixed;
+      top: 236px;
+      text-align: center;
+      border-spacing: none;
+      width: 90%;
+      height: 40px;
+    }
+    
+    table border {
+      border: 2px ridge #987456;
+ </style>
  <table>
-<tr>
-  <th><i class="fa fa-star"></i></th>
-  <th><i class="fa fa-check"></i></th>
-  <th><i class="fa fa-plus"></i></th>
-  </tr>
-  
 <tr>
  <caption>Textiles</caption>
  <td><img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"></td>
