--- a/gallery.html
+++ b/gallery.html
@@ -26,6 +26,11 @@
     
     table border {
       border: 2px ridge #987456;
+    }
+    
+    td {
+     border-collapse: collapse;
+    }
  </style>
  <table>
 <tr>
