--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <meta charset="utf-8">
- <title>About Me</title>
+ <title>Gallery</title>
   <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
  <link href='style.css' rel='stylesheet'>
