--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <head>
+  <title>Pricing</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
    <link href='style.css' rel='stylesheet'>
    </head>
