--- a/gallery.html
+++ b/gallery.html
@@ -24,9 +24,9 @@
       height: 40px;
     }
     
-    table border {
-      border: 2px ridge #987456;
-    }
+   tr {
+    width: 40%;
+   }
     
     td {
      border-collapse: collapse;
