--- a/gallery.html
+++ b/gallery.html
@@ -18,6 +18,7 @@
       border: 2px solid #000;
       position: fixed;
       top: 236px;
+      left: 534px;
       text-align: center;
       border-spacing: none;
       width: 0%;
