--- a/pricing.html
+++ b/pricing.html
@@ -76,6 +76,11 @@
       height: 20px;
       vertical-align: bottom;
     }
+    
+    tr:nth-child(6),
+    border-bottom {
+      border-bottom: 3pt solid #987456;
+    }
     td {
       border: 1px solid #bada55;
     }
@@ -170,7 +175,7 @@ contains logo designs and poster designs.
     $300
   </td>
 </tr>
-<tr>
+<tr style="border-bottom: 3pt solid #987456>
   <td style="border-bottom: 12px"><a class="btn" href="contact.html">Contact me Now!!!</a></td>
   <td style="border-bottom: 12px"><a class="btn" href="contact.html">Contact me Now!!!</a></td>
   <td style="border-bottom: 12px"><a class="btn" href="contact.html">Contact me Now!!!</a></td>
