--- a/gallery.html
+++ b/gallery.html
@@ -34,11 +34,13 @@
     }
  </style>
  <table>
+  <tr>
+   <th>Textiles</th>
+  </tr>
 <tr>
- <caption>Textiles</caption>
  <td><img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"></td>
  </tr>
- <tr><
+ <tr>
 <td><img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles"></td>
 </tr>
 </body>
