--- a/gallery.html
+++ b/gallery.html
@@ -34,9 +34,11 @@
     }
  </style>
  <table>
+  <thead>
   <tr>
    <th>Textiles</th>
   </tr>
+  </thead>
 <tr>
  <td><img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"></td>
  </tr>
