--- a/gallery.html
+++ b/gallery.html
@@ -23,6 +23,10 @@
       height: 20px;
     }
     
+    thead{
+     font: 'Monsterrat',sans-serif;
+     font-size: 24px;
+    }
    tr {
     width: 40%;
    }
