--- a/pricing.html
+++ b/pricing.html
@@ -175,7 +175,7 @@ contains logo designs and poster designs.
     $300
   </td>
 </tr>
-<tr>
+<tr colspan="3">
   <td style="border-bottom: 12px"><a class="btn" href="contact.html">Contact me Now!!!</a></td>
   <td style="border-bottom: 12px"><a class="btn" href="contact.html">Contact me Now!!!</a></td>
   <td style="border-bottom: 12px"><a class="btn" href="contact.html">Contact me Now!!!</a></td>
