--- a/pricing.html
+++ b/pricing.html
@@ -177,7 +177,7 @@ contains logo designs and poster designs.
 </tr>
 <tr colspan="3">
   <td></td>
-  <td style="border-bottom: 12px"><a class="btn" href="contact.html">Contact me Now!!!</a></td>
+  <td colspan ="3"><a class="btn" href="contact.html">Contact me Now!!!</a></td>
   <td></td>
 </tr>
 </table>
