--- a/pricing.html
+++ b/pricing.html
@@ -175,7 +175,7 @@ contains logo designs and poster designs.
     $300
   </td>
 </tr>
-<tr colspan="3">
+<tr colspan="3" align="center">
   <td></td>
   <td><a class="btn" href="contact.html">Contact me Now!!!</a></td>
   <td></td>
