--- a/pricing.html
+++ b/pricing.html
@@ -122,7 +122,7 @@
 </head>
 <body>
 
-<table border="5" cellpadding="4">
+<table border="5" cellpadding="4" cellspacing="2">
 <tr>
   <th><i class="fa fa-check-circle-o"></i></th>
   <th><i class="fa fa-check"></i></th>
