--- a/gallery.html
+++ b/gallery.html
@@ -45,15 +45,11 @@
   </thead>
 <tr>
  <td><img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"></td>
- <dl>
-  <dt>Striped Pattern</dt>
- </dl>
+  <caption>Striped Pattern</caption>
  </tr>
  <tr>
 <td><img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles"></td>
-<dl>
- <dt>Diamond Pattern</dt>
-</dl>
+ <caption>Diamond Pattern</caption>
 </tr>
 </body>
 </table>
