--- a/gallery.html
+++ b/gallery.html
@@ -44,10 +44,10 @@
   </tr>
   </thead>
 <tr>
- <td><img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"><caption>Striped Pattern</caption></td>
+ <td><img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"></td>
  </tr>
  <tr>
-<td><img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles"><caption>Diamond Pattern</caption></td>
+<td><img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles"></td>
 </tr>
 </body>
 </table>
