--- a/gallery.html
+++ b/gallery.html
@@ -44,10 +44,20 @@
   </tr>
   </thead>
 <tr>
- <td><img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles"></td>
+ <td>
+  <figure>
+  <img width="300" src="http://i.imgur.com/bEufb8C.gif" alt="my-designs" title="Textiles">
+  <figcaption>Striped Pattern</figcaption>
+  </figure>
+  </td>
  </tr>
  <tr>
-<td><img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles"></td>
+<td>
+ <figure>
+ <img width="300" src="http://i.imgur.com/JToaZUq.gif" alt="my-designs" title="Textiles">
+ <figcaption>Diamond Pattern</figcaption>
+ </figure>
+ </td>
 </tr>
 </body>
 </table>
