--- a/gallery.html
+++ b/gallery.html
@@ -36,6 +36,12 @@
      width: 0%;
      height: 12px;
     }
+    
+    figcaption {
+      font: 'Monsterrat',sans-serif;
+     font-size: 24px;
+     text-decoration: uppercase;
+    }
  </style>
  <table>
   <thead>
