--- a/gallery.html
+++ b/gallery.html
@@ -43,6 +43,13 @@
      font-size: 24px;
      text-decoration: uppercase;
     }
+    
+    th colspan {
+     font: 'Monsterrat', sans-serif;
+     font-size: 36px;
+     color: #987456;
+     font-weight: bold;
+    }
  </style>
  <table>
   <thead>
