--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
   table {
       position: fixed;
       top: 236px;
-      left: 742px;
+      left: 578px;
       text-align: center;
       width: 0%;
       height: 20px;
@@ -39,9 +39,10 @@
     }
     
     figcaption {
-      font: 'Monsterrat',sans-serif;
-     font-size: 24px;
      text-decoration: uppercase;
+     font: 'Monsterrat',sans-serif;
+     font-size: 24px;
+     font-weight: bold;
     }
     
     th colspan {
