--- a/gallery.html
+++ b/gallery.html
@@ -43,6 +43,7 @@
      font: 'Monsterrat',sans-serif;
      font-size: 24px;
      font-weight: bold;
+     color: 3987456;
     }
     
     th colspan {
