--- a/gallery.html
+++ b/gallery.html
@@ -38,6 +38,8 @@
      height: 12px;
     }
     
+    td,
+    figure,
     figcaption {
      text-decoration: uppercase;
      font: 'Monsterrat',sans-serif;
