--- a/pricing.html
+++ b/pricing.html
@@ -109,6 +109,7 @@
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
   text-decoration: none;
   
+   header,
    h2 {
         text-align: center;
     color: #fff;
