--- a/pricing.html
+++ b/pricing.html
@@ -116,7 +116,7 @@
     top: 6px;
     left: 177px
     color: #fff;
-    font-family: 'Satisfy', cursive;
+    font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
     font-size: 30px;
 }
   </style>
