--- a/pricing.html
+++ b/pricing.html
@@ -155,6 +155,9 @@ contains logo designs and poster designs.
        <ul>
      <li>3-D printing</li>
      <li>10 Custom logo Designs</li>
+     <li>Business Cards</li>
+     <li>Letterheads</li>
+     <li>Brochures</li>
    </ul>
   </td>
 </tr>
