--- a/pricing.html
+++ b/pricing.html
@@ -140,8 +140,10 @@ contains logo designs and poster designs.
 <tr>
   <td>
    <ul>
-  <li>Posters</li>
   <li>A custom logo Design</li>
+   <li>Posters</li>
+   <li>Photoshop/Illustrator Tutorials</li>
+   <li>Fonts</li>
    </ul> 
   </td>
   <td>
