--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
       text-align: center;
       width: 0%;
       height: 20px;
-      border: 3px ridge #fff;
+      border: 4px ridge #987456;
     }
     
     thead{
@@ -45,7 +45,7 @@
      font: 'Monsterrat',sans-serif;
      font-size: 24px;
      font-weight: bold;
-     color: 3987456;
+     color: #987456;
     }
     
     th colspan {
