--- a/gallery.html
+++ b/gallery.html
@@ -46,6 +46,7 @@
      font-size: 24px;
      font-weight: bold;
      color: #987456;
+      text-shadow: 0 -2px 36px #cd853f;
     }
     
     th colspan {
