--- a/gallery.html
+++ b/gallery.html
@@ -45,7 +45,7 @@
      font: 'Monsterrat',sans-serif;
      font-size: 24px;
      font-weight: bold;
-     color: #987456;
+     color: #fff;
       text-shadow: 0 -2px 36px #cd853f;
     }
     
