--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        </strong>
        </section>
        
-       <section>
+       <section nth:child (2)>
          <a href="gallrty.html">See my Work</a>
        </section>
        
