--- a/about.html
+++ b/about.html
@@ -14,6 +14,16 @@
  </nav></header>
  <article>
 <body>
+ <style>
+   section {
+        position: fixed;
+        top: 292px;
+       text-align: center;
+       background-color: #987456;
+      height: 70px;
+      width: 100%;
+  } 
+ </style>
  <section>
  <img width="200" src="http://i.imgur.com/3IBDGp4.gif" alt="photo of me" title="Gala">
  </section>
