--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
            padding: 20px;
            text-decoration: none;
            text-transform: capitalize;
+           
+           section {
+  position: relative;
+}
+
+section a {
+  width: 300px;
+  height: 100px;
+  padding: 20px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  margin: -70px 0 0 -170px;
+}
          }
        </style>
       <section>
