--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@ section a {
 
   margin: -69px 0 0 -227px;
 }
-         }
+
+section p {
+  
+}
+         
        </style>
       <section>
       <p> Welcome to my homepage.<br> I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.<br><a href="http://i.imgur.com/dWCPrEB.gif">Certificate of Completion</a></p>
