--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
        <style>
 section {
   position: relative;
+  background: -webkit-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); 
+  background:    -moz-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); 
+  background:     -ms-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); 
+  background:      -o-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); 
+  background:         linear-gradient(90deg, #abbaab 10%, #ffffff 90%);
 }
 
 section a {
@@ -33,7 +38,11 @@ section a {
 }
 
 section p {
-  
+  position: fixed;
+  top: 292px;
+  text-align: center;
+  background-color: #987456;
+  color: #fff;
 }
          
        </style>
