--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ section a {
 
 section p {
   position: fixed;
-  top: 292px;
+  top: 182px;
   text-align: center;
   background-color: #987456;
   color: #fff;
@@ -47,7 +47,8 @@ section p {
          
        </style>
       <section>
-      <p> Welcome to my homepage.<br> I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.<br><a href="http://i.imgur.com/dWCPrEB.gif">Certificate of Completion</a></p>
+      <p> Welcome to my homepage.<br> I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.
+      <br><a href="http://i.imgur.com/dWCPrEB.gif">Certificate of Completion</a></p>
       </section>
       <strong>
         <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a><br>
