--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <article>
      <body>
        <style>
-section {
+section#work {
   position: relative;
   background: -webkit-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); 
   background:    -moz-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); 
@@ -25,7 +25,7 @@ section {
   background:         linear-gradient(90deg, #abbaab 10%, #ffffff 90%);
 }
 
-section a {
+section#work a {
   width: 300px;
   height: 25px;
   padding: 20px;
@@ -37,7 +37,7 @@ section a {
   margin: -69px 0 0 -227px;
 }
 
-section p {
+section#work p {
   position: fixed;
   top: 182px;
   text-align: center;
@@ -56,7 +56,7 @@ section p {
        </strong>
        </section>
        
-       <section nth:child (2)>
+       <section id="work">
          <a href="gallery.html">See my Work</a>
        </section>
        
