--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ section#work {
   background:         linear-gradient(90deg, #abbaab 10%, #ffffff 90%);
 }
 
-section#work a {
+section#work {
   width: 300px;
   height: 25px;
   padding: 20px;
@@ -37,7 +37,7 @@ section#work a {
   margin: -69px 0 0 -227px;
 }
 
-section#work p {
+section#work {
   position: fixed;
   top: 182px;
   text-align: center;
