--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ section#work {
 section#work {
   position: fixed;
   top: 182px;
+  left: 300px;
   text-align: center;
   background-color: #987456;
   color: #fff;
