--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@ section#work {
 }
 
 section#work {
-  width: 300px;
-  height: 25px;
+  width: 100%;
+  height: 250px;
   padding: 20px;
+  text-decoration: none;
 
   position: absolute;
   top: 50%;
   left: 50%;
 
-  margin: -69px 0 0 -227px;
+  margin: -130px 0 0 -978px;
 }
 
 section#work {
@@ -43,6 +44,13 @@ section#work {
   text-align: center;
   background-color: #987456;
   color: #fff;
+}
+
+p {
+  position: fixed;
+bottom: -55px;
+left: 12px;
+color: #DEB887;
 }
          
        </style>
