--- a/index.html
+++ b/index.html
@@ -40,17 +40,24 @@ section#work {
 
 section#work {
   position: fixed;
-  top: 182px;
+  top: 404px;
   text-align: center;
   background-color: #987456;
   color: #fff;
 }
 
-p {
+strong {
   position: fixed;
 bottom: -55px;
 left: 12px;
-color: #DEB887;
+color: ##DEB887;
+}
+
+p {
+  position: fixed;
+bottom: -55px;
+left: 317px;
+color: #fff;
 }
          
        </style>
