--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
        <style>
 section#work {
   position: relative;
-  background: -webkit-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); 
-  background:    -moz-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); 
-  background:     -ms-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); 
-  background:      -o-linear-gradient(90deg, #abbaab 10%, #ffffff 90%); 
-  background:         linear-gradient(90deg, #abbaab 10%, #ffffff 90%);
+
+  background: -webkit-linear-gradient(90deg, #F0C27B 10%, #4B1248 90%); 
+  background:    -moz-linear-gradient(90deg, #F0C27B 10%, #4B1248 90%); 
+  background:     -ms-linear-gradient(90deg, #F0C27B 10%, #4B1248 90%); 
+  background:      -o-linear-gradient(90deg, #F0C27B 10%, #4B1248 90%); 
+  background:         linear-gradient(90deg, #F0C27B 10%, #4B1248 90%)
 }
 
 section#work {
