--- a/about.html
+++ b/about.html
@@ -22,4 +22,11 @@ In my spare time, I usually like to read, draw, and write. My motto is: Be weird
 </body>
 </article>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
+<style>
+ section id#gala {
+  position: fixed;
+  top: 335px;
+  left: 500px;
+ }
+</style>
 </html>
