--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
  </nav></header>
  <article>
 <body>
- <section>
+ <section id="gala">
  <img width="200" src="http://i.imgur.com/3IBDGp4.gif" alt="photo of me" title="Gala">
  </section>
  <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami.<br>
