--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 section#work {
   position: relative;
 
-  background: -webkit-linear-gradient(90deg, #F0C27B 10%, #4B1248 90%); 
-  background:    -moz-linear-gradient(90deg, #F0C27B 10%, #4B1248 90%); 
-  background:     -ms-linear-gradient(90deg, #F0C27B 10%, #4B1248 90%); 
-  background:      -o-linear-gradient(90deg, #F0C27B 10%, #4B1248 90%); 
-  background:         linear-gradient(90deg, #F0C27B 10%, #4B1248 90%)
+   background: -webkit-linear-gradient(90deg, #E6DADA 10%, #274046 90%);
+  background:    -moz-linear-gradient(90deg, #E6DADA 10%, #274046 90%); 
+  background:     -ms-linear-gradient(90deg, #E6DADA 10%, #274046 90%); 
+  background:      -o-linear-gradient(90deg, #E6DADA 10%, #274046 90%); 
+  background:         linear-gradient(90deg, #E6DADA 10%, #274046 90%); 
 }
 
 section#work {
