--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
 section#work {
   position: relative;
 
-   background: -webkit-linear-gradient(90deg, #E6DADA 10%, #274046 90%);
-  background:    -moz-linear-gradient(90deg, #E6DADA 10%, #274046 90%); 
-  background:     -ms-linear-gradient(90deg, #E6DADA 10%, #274046 90%); 
-  background:      -o-linear-gradient(90deg, #E6DADA 10%, #274046 90%); 
-  background:         linear-gradient(90deg, #E6DADA 10%, #274046 90%); 
-}
+  background: -webkit-linear-gradient(90deg, #ECE9E6 10%, #FFFFFF 90%); 
+  background:    -moz-linear-gradient(90deg, #ECE9E6 10%, #FFFFFF 90%); 
+  background:     -ms-linear-gradient(90deg, #ECE9E6 10%, #FFFFFF 90%); 
+  background:      -o-linear-gradient(90deg, #ECE9E6 10%, #FFFFFF 90%); 
+  background:         linear-gradient(90deg, #ECE9E6 10%, #FFFFFF 90%);
 
 section#work {
   width: 100%;
