--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ color: #fff;
        </section>
        
       <div>
-        <video src="https://ia802709.us.archive.org/25/items/snowflakes_201412/snowflakes.mp4" autoplay></video>
+        <video src="https://ia802709.us.archive.org/25/items/snowflakes_201412/snowflakes.mp4" autoplay loop muted></video>
       </div>
        
 </body>
