--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@ bottom: 71px;
 left: 317px;
 color: #fff;
 }
+
+video {
+  width: 100%;
+}
+
+div {
+  height: 350px;
+}
          
        </style>
       
