--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@ section#work {
   background:     -ms-linear-gradient(90deg, #ECE9E6 10%, #FFFFFF 90%); 
   background:      -o-linear-gradient(90deg, #ECE9E6 10%, #FFFFFF 90%); 
   background:         linear-gradient(90deg, #ECE9E6 10%, #FFFFFF 90%);
+}
 
-section#2ork {
+section#work {
   width: 100%;
   height: 250px;
   padding: 20px;
