--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
  </nav></header>
  <article>
 <body>
- <section id="gala">
+ <section>
  <img width="200" src="http://i.imgur.com/3IBDGp4.gif" alt="photo of me" title="Gala">
  </section>
  <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami.<br>
@@ -23,7 +23,7 @@ In my spare time, I usually like to read, draw, and write. My motto is: Be weird
 </article>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 <style>
- section id#gala {
+ section {
   position: fixed;
   top: 335px;
   left: 500px;
