--- a/index.html
+++ b/index.html
@@ -8,22 +8,13 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
   <link href='style.css' rel='stylesheet'>
   </head>
-  <header>
-    <div id="header">
-      <div class="pull-left"
-       <img width="150" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">
-        <h2>A girl who simply enjoys the creative things in life.</h2>
-    </div>
-    <div id="nav">
-      <div class="container">
-        <ul class="pull-right">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          </div>
-  </header>
+  <header><img width="150" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">
+  <h2>A girl who simply enjoys the creative things in life.</h2>
+  <h1>Mikeala Francis</h1><nav>
+     <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Pricing</a>|<a href="gallery.html">Gallery</a>
+     </nav>
+</header>
+
      <article>
      <body>
       <p> Welcome to my homepage.<br> I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.<br><a href="http://i.imgur.com/dWCPrEB.gif">Certificate of Completion</a></p>
