--- a/about.html
+++ b/about.html
@@ -12,14 +12,12 @@
 <h1>About Me</h1><nav>
   <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Pricing</a>|<a href="gallery.html">Gallery</a>
  </nav></header>
- <article>
 <body>
- <section id="Gala">
+ <div>
  <img width="200" src="http://i.imgur.com/3IBDGp4.gif" alt="photo of me" title="Gala">
- </section>
+ </div>
  <p> My name is Mikeala Francis and I am a Graphic and Web Design student at Art Institute of Miami.<br>
 In my spare time, I usually like to read, draw, and write. My motto is: Be weird, Be Original.</p>
 </body>
-</article>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </html>
