--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
      </nav>
 </header>
 
-     <article>
      <body>
       <p> Welcome to my homepage.<br> I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.<br><a href="http://i.imgur.com/dWCPrEB.gif">Certificate of Completion</a></p>
       <strong>
@@ -29,11 +28,10 @@
          <a href="gallery.html">See my Work</a>
        </section>
        
-      <div class="video">
+      <div>
        <video src="https://ia802709.us.archive.org/25/items/snowflakes_201412/snowflakes.mp4" autoplay loop muted></video>
       </div>
        
 </body>
-</article>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </html>
