--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        </section>
        
       <div>
-       <video src="https://ia802709.us.archive.org/25/items/snowflakes_201412/snowflakes.mp4" autoplay loop muted></video>
+       <video src= autoplay loop muted></video>
       </div>
        
 </body>
