--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,18 @@
 <!doctype html>
-
-<h1>My Resume</h1>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Resume</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+     <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
+  <link href='style.css' rel='stylesheet'>
+  </head>
+  <header><img width="150" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">
+  <h2>A girl who simply enjoys the creative things in life.</h2>
+  <h1>My Resume</h1><nav>
+     <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Pricing</a>|<a href="gallery.html">Gallery</a>|<a href="resume.html"
+     </nav>
+</header>
 
 <iframe src="http://kimberlygonzalez.me"></iframe>
