--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <header><img width="150" src="http://i.imgur.com/f246AsW.gif" alt="My logo" title="Mikeala Francis Logo">
 <h2>A girl who simply enjoys the creative things in life</h2>
 <h1>Contact</h1><nav>
-  <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Pricing</a>|<a href="gallery.html">Gallery</a></nav></header>
+  <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Pricing</a>|<a href="gallery.html">Gallery</a>|<a href="resume.html>Resume</nav></header>
 <section>
 <body>
 <p> For more information, email me at mikealafrancis@gmail.com</p>
