--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
   <header><img width="150" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">
   <h2>A girl who simply enjoys the creative things in life.</h2>
   <h1>My Resume</h1><nav>
-     <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Pricing</a>|<a href="gallery.html">Gallery</a>|<a href="resume.html"
+     <a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Pricing</a>|<a href="gallery.html">Gallery</a>|<a href="resume.html">Resume</a>
      </nav>
 </header>
 
