--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
 <header><img src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo" width="150">
 <h2>A girl who simply enjoys the creative things in life.</h2>
 <h1>Gallery</h1><nav>
-<a href="index.html">Home</a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Pricing</a>|<a href="gallery.html">Gallery</a>|<a href="resume.html">Resume</a>
+<a href="index.html"><i class="fa fa-home"></i></a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Pricing</a>|<a href="gallery.html">Gallery</a>|<a href="resume.html">Resume</a>
  </nav></header>
 <body>
  <style>
