--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
  <meta charset="utf-8">
  <title>About Me</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
  <link href='style.css' rel='stylesheet'>
