--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <header><img width="150" src="http://i.imgur.com/f246AsW.gif" alt="My logo" title="Mikeala Francis Logo">
 <h2>A girl who simply enjoys the creative things in life</h2>
 <h1>Contact</h1><nav>
-  <a href="index.html"><i class="fa fa-home"></i></a>|<a href="about.html">About Me</a>|<a href="contact.html">Contact</a>|<a href="pricing.html">Pricing</a>|<a href="gallery.html">Gallery</a>|<a href="resume.html">Resume</a></nav></header>
+ <a href="index.html"><i class="fa fa-home"></i></a></a>|<a href="about.html"><i class="fa fa-user"></i></a>|<a href="contact.html"><i class="fa fa-phone"></i></a>|<a href="pricing.html"><i class="fa fa-credit-card"></i></a>|<a href="gallery.html"><i class="fa fa-picture-o"></i></a>|<a href="resume.html"><i class="fa fa-file-text"></i></a></nav></header>
 <section>
 <body>
 <p> For more information, email me at mikealafrancis@gmail.com</p>
