--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
          <a href="gallery.html">See my Work</a>
        </section>
        
-      <div>
-       <video src= autoplay loop muted></video>
-      </div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/r10cufRqeDU" frameborder="0" allowfullscreen></iframe>
       
 </body>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
