--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
      <body>
       <p> Welcome to my homepage.<br> I am a graphic design student at Art Institute-Miami who is trying to see the world in a quirky way.<br><a href="http://i.imgur.com/dWCPrEB.gif">Certificate of Completion</a></p>
       <strong>
-        <a href="https://www.facebook.com/profile.php?id=100008913274156">Facebook</a><br>
-       <a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile">LinkedIn</a><br>
-       <a href="https://twitter.com/francis_mikeala">Twitter</a>
+        <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a><br>
+       <a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a><br>
+       <a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
        </strong>
        </section>
        
