--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,12 @@
 <header><img width="150" src="http://i.imgur.com/f246AsW.gif" alt="My logo" title="Mikeala Francis Logo">
 <h2>A girl who simply enjoys the creative things in life</h2>
 <h1>Contact</h1><nav>
- <a href="index.html"><i class="fa fa-home"></i></a></a>|<a href="about.html"><i class="fa fa-user"></i></a>|<a href="contact.html"><i class="fa fa-phone"></i></a>|<a href="pricing.html"><i class="fa fa-credit-card"></i></a>|<a href="gallery.html"><i class="fa fa-picture-o"></i></a>|<a href="resume.html"><i class="fa fa-file-text"></i></a></nav></header>
+ <a href="index.html"><i class="fa fa-home"></i></a></a>|<a href="about.html"><i class="fa fa-user"></i></a>|<a href="contact.html"><i class="fa fa-phone"></i></a>|<a href="pricing.html"><i class="fa fa-credit-card"></i></a>|<a href="gallery.html"><i class="fa fa-picture-o"></i></a>|<a href="resume.html"><i class="fa fa-file-text"></i></a>
+ </nav>
+ <strong>
+   <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
+  </strong>
+ </header>
 <section>
 <body>
 <p> For more information, email me at mikealafrancis@gmail.com</p>
