--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,12 @@
         <a href="https://www.facebook.com/profile.php?id=100008913274156"><i class="fa fa-facebook"></i></a>|<a href="https://www.linkedin.com/profile/view?id=436671428&trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>|<a href="https://twitter.com/francis_mikeala"><i class="fa fa-twitter"></i></a>
        </strong>
 </header>
-<iframe src="https://drive.google.com/file/d/0BxxCt370u7tJWWNHMzc3bWZwbGs/view?usp=sharing">Resume</iframe>
-
+<style>
+  iframe {
+    width: 70%;
+    height: 150px;
+  }
+</style>
+<iframe src="https://drive.google.com/file/d/0BxxCt370u7tJVFBUTVBZNDBKeW8/preview" width="640" height="480"></iframe>
 <footer>Created by Mikeala Francis &copy; 2015</footer>
 </html>
