--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,8 @@
 <style>
   iframe {
     width: 70%;
-    height: 150px;
+    height: 300px;
+    display: block;
   }
 </style>
 <iframe src="https://drive.google.com/file/d/0BxxCt370u7tJVFBUTVBZNDBKeW8/preview" width="640" height="480"></iframe>
