--- a/resume.html
+++ b/resume.html
@@ -21,8 +21,10 @@
 <style>
   iframe {
     width: 70%;
-    height: 300px;
+    height: 900px;
     display: block;
+    position: fixed;
+    top: 225px;
   }
 </style>
 <iframe src="https://drive.google.com/file/d/0BxxCt370u7tJVFBUTVBZNDBKeW8/preview" width="640" height="480"></iframe>
