--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,7 @@
   <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
  <link href='style.css' rel='stylesheet'>
+ <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 </head>
 <header><img src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo" width="150">
 <h2>A girl who simply enjoys the creative things in life.</h2>
@@ -83,3 +84,4 @@
 </tr>
 </body>
 </table>
+</html>
