--- a/gallery.html
+++ b/gallery.html
@@ -78,6 +78,16 @@
      font-weight: bold;
     }
  </style>
+ <div class="table">
+  <div class="row">
+   <div class="col-md-4">
+    <div class="thumbnail">
+     <img src="http://i.imgur.com/bEufb8C.gif">
+    </div>
+    <div class="thumbnail">
+     <img src="http://i.imgur.com/JToaZUq.gif">
+   </div>
+  </div>
  <table>
   <thead>
   <tr>
