--- a/gallery.html
+++ b/gallery.html
@@ -79,7 +79,7 @@
 </div>
  <div class="table">
   <div class="row">
-   <div class="col-md-4">
+   <div class="row-md-4">
     <div class="thumbnail">
      <img src="http://i.imgur.com/bEufb8C.gif">
     </div>
