--- a/gallery.html
+++ b/gallery.html
@@ -79,12 +79,12 @@
 </div>
  <div class="table">
   <div class="row">
-   <div class="row-md-4">
+   <div class="col-md-4">
     <div class="thumbnail">
-     <img src="http://i.imgur.com/bEufb8C.gif">
+     <img src="http://i.imgur.com/bEufb8C.gif" alt=My Designs title=Striped Pattern>
     </div>
     <div class="thumbnail">
-     <img src="http://i.imgur.com/JToaZUq.gif">
+     <img src="http://i.imgur.com/JToaZUq.gif" alt=My Designs title=Diamond Pattern>
    </div>
   </div>
 </body>
