--- a/gallery.html
+++ b/gallery.html
@@ -81,10 +81,16 @@
   <div class="row">
    <div class="col-md-4">
     <div class="thumbnail">
+     <figure>
      <img src="http://i.imgur.com/bEufb8C.gif" alt=My Designs title=Striped Pattern>
+     <figcaption>Striped Pattern</figcaption>
+     </figure>
     </div>
     <div class="thumbnail">
+     <figure>
      <img src="http://i.imgur.com/JToaZUq.gif" alt=My Designs title=Diamond Pattern>
+     <figcaption>Diamond Pattern</figcaption>
+     </figure>
    </div>
   </div>
 </body>
