--- a/gallery.html
+++ b/gallery.html
@@ -40,8 +40,9 @@
     
    figcaption {
     font: 'Monsterrat' sans-serif;
+    color: #fff;
     position: fixed;
-    top: 345px;
+    top: 545px;
     Left: 578px;
    }
  </style>
