--- a/gallery.html
+++ b/gallery.html
@@ -57,16 +57,17 @@
   <div class="row">
    <div class="col-md-4">
     <div class="thumbnail">
-     <figure>
      <img src="http://i.imgur.com/bEufb8C.gif" alt=My Designs title=Striped Pattern>
-     <figcaption>Striped Pattern</figcaption>
-     </figure>
     </div>
     <div class="thumbnail">
-     <figure>
      <img src="http://i.imgur.com/JToaZUq.gif" alt=My Designs title=Diamond Pattern>
+   </div>
+   
+   <div class="col-md-4">
+    <div class="thumbnail">
+     <figcaption>Striped Pattern</figcaption>
      <figcaption>Diamond Pattern</figcaption>
-     </figure>
+    </div>
    </div>
   </div>
 </body>
