--- a/social-media.html
+++ b/social-media.html
@@ -19,6 +19,11 @@ $(document).ready(function() {
 .lg-outer{
   text-align: left;
 }
+
+#twitter-timeline {
+  position: fixed;
+  top: 258px;
+}
 </style>
   </head>
   <header><img width="150" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">
