--- a/gallery.html
+++ b/gallery.html
@@ -48,8 +48,10 @@
  </style>
   <div id="lightgallery">
   <a href="http://i.imgur.com/bEufb8C.gif">
+   <img src="http://i.imgur.com/bEufb8C.gif">
   </a>
   <a href="http://i.imgur.com/JToaZUq.gif">
+   <img src="http://i.imgur.com/JToaZUq.gif">
   </a>
   ...
 </div>
