--- a/gallery.html
+++ b/gallery.html
@@ -53,23 +53,10 @@
   <a href="http://i.imgur.com/JToaZUq.gif">
    <img src="http://i.imgur.com/JToaZUq.gif">
   </a>
+  <a href="http://i.imgur.com/GaIFM8c.gif">
+   <img src="http://i.imgur.com/GaIFM8c.gif">
+  </a>
   ...
 </div>
- <div class="table">
-  <div class="row">
-   <div class="col-md-4">
-    <div class="thumbnail">
-     <img src="http://i.imgur.com/bEufb8C.gif" alt=My Designs title=Striped Pattern>
-    </div>
-    <div class="thumbnail">
-     <img src="http://i.imgur.com/JToaZUq.gif" alt=My Designs title=Diamond Pattern>
-   </div>
-   
-   <div class="col-md-4">
-    <div class="thumbnail">
-     <figcaption>Striped Pattern</figcaption>
-    </div>
-   </div>
-  </div>
 </body>
 </html>
