--- a/gallery.html
+++ b/gallery.html
@@ -53,6 +53,9 @@
   <a href="http://i.imgur.com/JToaZUq.gif">
    <img src="http://i.imgur.com/JToaZUq.gif">
   </a>
+  <a href="http://i.imgur.com/8xorC2w.gif">
+   <img src="http://i.imgur.com/8xorC2w.gif">
+  </a>
   <a href="http://i.imgur.com/GaIFM8c.gif">
    <img src="http://i.imgur.com/GaIFM8c.gif">
   </a>
