--- a/gallery.html
+++ b/gallery.html
@@ -28,14 +28,13 @@
 <body>
 
  <style>
-  .table {
+  .lightgallery {
       position: fixed;
       top: 300px;
-      left: 578px;
+      left: 150px;
       text-align: center;
       width: 0%;
       height: 20px;
-      border: 4px ridge #987456;
     }
     
    figcaption {
