--- a/gallery.html
+++ b/gallery.html
@@ -42,4 +42,14 @@
   ...
 </div>
 </body>
+<style>
+  .lightgallery {
+      position: fixed;
+      top: 300px;
+      left: 350px;
+      text-align: center;
+      width: 0%;
+      height: 20px;
+    }
+</style>
 </html>
