--- a/gallery.html
+++ b/gallery.html
@@ -28,16 +28,17 @@
 <body>
   <div id="lightgallery">
   <a href="http://i.imgur.com/bEufb8C.gif">
-   <img src="http://i.imgur.com/bEufb8C.gif">Striped Pattern
+   <img src="http://i.imgur.com/bEufb8C.gif">
   </a>
   <a href="http://i.imgur.com/JToaZUq.gif">
-   <img src="http://i.imgur.com/JToaZUq.gif">Diamond Pattern
+   <img src="http://i.imgur.com/JToaZUq.gif">
   </a>
   <a href="http://i.imgur.com/8xorC2w.gif">
-   <img src="http://i.imgur.com/8xorC2w.gif">Flowers
+   <img src="http://i.imgur.com/8xorC2w.gif">
+   <figcaption>Flowers</figcaption>
   </a>
   <a href="http://i.imgur.com/GaIFM8c.gif">
-   <img src="http://i.imgur.com/GaIFM8c.gif">The Royal Show:Madonna vs. Lady Gaga
+   <img src="http://i.imgur.com/GaIFM8c.gif">
   </a>
   ...
 </div>
