--- a/gallery.html
+++ b/gallery.html
@@ -28,16 +28,16 @@
 <body>
   <div id="lightgallery">
   <a href="http://i.imgur.com/bEufb8C.gif">
-   <img src="http://i.imgur.com/bEufb8C.gif">
+   <img src="http://i.imgur.com/bEufb8C.gif" title="Striped Pattern">
   </a>
   <a href="http://i.imgur.com/JToaZUq.gif">
-   <img src="http://i.imgur.com/JToaZUq.gif">
+   <img src="http://i.imgur.com/JToaZUq.gif" title="Diamond Pattern">
   </a>
   <a href="http://i.imgur.com/8xorC2w.gif">
-   <img src="http://i.imgur.com/8xorC2w.gif">
+   <img src="http://i.imgur.com/8xorC2w.gif" title="Flowers">
   </a>
   <a href="http://i.imgur.com/GaIFM8c.gif">
-   <img src="http://i.imgur.com/GaIFM8c.gif">
+   <img src="http://i.imgur.com/GaIFM8c.gif" title="The Royal Show">
   </a>
   ...
 </div>
