--- a/social-media.html
+++ b/social-media.html
@@ -20,9 +20,10 @@ $(document).ready(function() {
   text-align: left;
 }
 
-#twitter-timeline {
+.twitter-timeline {
   position: fixed;
   top: 258px;
+  left: 20px;
 }
 </style>
   </head>
