--- a/gallery.html
+++ b/gallery.html
@@ -34,10 +34,10 @@
    <img src="http://i.imgur.com/JToaZUq.gif" title="Diamond Pattern">
   </a>
   <a href="http://i.imgur.com/8xorC2w.gif">
-   <img src="http://i.imgur.com/8xorC2w.gif" title="Flowers">
+   <img src="http://i.imgur.com/8xorC2w.gif" title="Flowers" width="150">
   </a>
   <a href="http://i.imgur.com/GaIFM8c.gif">
-   <img src="http://i.imgur.com/GaIFM8c.gif" title="The Royal Show">
+   <img src="http://i.imgur.com/GaIFM8c.gif" title="The Royal Show" width="150">
   </a>
   ...
 </div>
