--- a/social-media.html
+++ b/social-media.html
@@ -20,6 +20,10 @@ $(document).ready(function() {
   text-align: left;
 }
 
+iframe {
+  position: fixed;
+  top: 256px;
+}
 </style>
   </head>
   <header><img width="150" src="http://i.imgur.com/f246AsW.gif"  alt="my logo" title="Mikeala Francis Logo">
