--- a/social-media.html
+++ b/social-media.html
@@ -23,6 +23,13 @@ $(document).ready(function() {
 iframe {
   position: fixed;
   top: 256px;
+  left: 779px;
+}
+
+.twitter-timeline {
+  position: fixed;
+  top: 256px;
+  left: 300px;
 }
 </style>
   </head>
