--- a/gallery.html
+++ b/gallery.html
@@ -43,13 +43,13 @@
 </div>
 </body>
 <style>
-  .lightgallery {
+  #lightgallery {
       position: fixed;
-      top: 300px;
-      left: 350px;
+      top: 217px;
+      left: 216px;
       text-align: center;
-      width: 0%;
-      height: 20px;
+      width: 90%;
+      height: 40px;
     }
 </style>
 </html>
