--- a/social-media.html
+++ b/social-media.html
@@ -27,9 +27,9 @@ iframe {
 }
 
 .twitter-timeline {
-  position: fixed;
+  position: absolute;
   top: 256px;
-  left: 300px;
+  left: 200px;
 }
 </style>
   </head>
